# api/openapi.yaml
@@ -12,54 +12,42 @@ paths:
         $ref: '#/components/requestBodies/inline_object'
         content:
           application/json:
+            examples: {}
             schema:
               properties:
                 message:
+                  description: |
+                    メッセージ
                   type: string
                 result:
-                  $ref: '#/components/schemas/nest_2_joboffer'
+                  $ref: '#/components/schemas/result_joboffer'
               type: object
-      responses: {}
-      summary: job_offer
-      tags: []
-    post:
-      operationId: post-job_offer
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/result_joboffer'
           description: OK
-      summary: result
+      summary: job_offer
       tags: []
   /occupation:
     get:
       operationId: get-occupation
+      parameters: []
       requestBody:
         $ref: '#/components/requestBodies/inline_object_1'
         content:
           application/json:
+            examples: {}
             schema:
               properties:
                 message:
+                  description: メッセージ
                   type: string
-                ? ""
-                : $ref: '#/components/schemas/occupation_major_classification'
+                result:
+                  $ref: '#/components/schemas/occupation_middle_category'
               type: object
-      responses: {}
-      summary: occupation
-      tags: []
-    post:
-      operationId: post-occupation
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/inline_response_200'
           description: OK
-      summary: result
+      summary: occupation
       tags: []
   /total_population:
     get:
@@ -75,21 +63,12 @@ paths:
                   description: メッセージ
                   type: string
                 'result ':
-                  $ref: '#/components/schemas/nest_2_total_population'
+                  $ref: '#/components/schemas/result__total_population'
               type: object
-      responses: {}
-      summary: total_population
-      tags: []
-    post:
-      operationId: post-total_population
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/result__total_population'
           description: OK
-      summary: result
+      summary: total_population
       tags: []
 components:
   requestBodies:
@@ -109,39 +88,7 @@ components:
           schema:
             $ref: '#/components/schemas/inline_object_2'
   schemas:
-    nest_2_joboffer:
-      properties:
-        prefCode:
-          description: 県コード
-          type: string
-        prefName:
-          description: 県名
-          type: string
-        year:
-          description: 年度
-          type: string
-        matter:
-          description: 表示内容
-          type: string
-        class:
-          description: 表示分類
-          type: string
-        data:
-          description: 数値
-          type: string
-    inline_object:
-      properties:
-        message:
-          type: string
-        result:
-          $ref: '#/components/schemas/nest_2_joboffer'
-      type: object
     result_joboffer:
-      example:
-        finding_employment_count: 1.4658129805029452
-        broadName: broadName
-        valid_jobfinder: 6.027456183070403
-        valid_job_offer_number: 0.8008281904610115
       properties:
         broadName:
           description: 職業大分類1
@@ -155,26 +102,16 @@ components:
         finding_employment_count:
           description: 就職件数
           type: number
-    occupation_major_classification:
-      properties:
-        iscoCode:
-          description: 職業大分類コード
-          type: string
-        iscoName:
-          description: 職業大分類名
-          type: string
-    inline_object_1:
+    inline_object:
       properties:
         message:
+          description: |
+            メッセージ
           type: string
-        ? ""
-        : $ref: '#/components/schemas/occupation_major_classification'
+        result:
+          $ref: '#/components/schemas/result_joboffer'
       type: object
     occupation_middle_category:
-      example:
-        ismcoCode: ismcoCode
-        iscoCode: iscoCode
-        ismcoName: ismcoName
       properties:
         iscoCode:
           description: 職業大分類コード
@@ -185,53 +122,15 @@ components:
         ismcoName:
           description: 職業中分類名
           type: string
-    inline_response_200:
-      example:
-        ? ""
-        : ismcoCode: ismcoCode
-          iscoCode: iscoCode
-          ismcoName: ismcoName
-        message: message
-      properties:
-        message:
-          type: string
-        ? ""
-        : $ref: '#/components/schemas/occupation_middle_category'
-    data_total_population:
-      properties:
-        year:
-          description: 年度
-          maximum: 2016
-          minimum: 1995
-          type: number
-        value:
-          description: 値
-          type: number
-    nest_3__total_population:
-      properties:
-        label:
-          type: string
-        data:
-          $ref: '#/components/schemas/data_total_population'
-    nest_2_total_population:
-      properties:
-        boundaryYear:
-          type: number
-        data:
-          $ref: '#/components/schemas/nest_3__total_population'
-    inline_object_2:
+    inline_object_1:
       properties:
         message:
           description: メッセージ
           type: string
-        'result ':
-          $ref: '#/components/schemas/nest_2_total_population'
+        result:
+          $ref: '#/components/schemas/occupation_middle_category'
       type: object
     result__total_population:
-      example:
-        bitrh_number: 6.027456183070403
-        died_number: 1.4658129805029452
-        total_population: 0.8008281904610115
       properties:
         total_population:
           description: 総人口
@@ -242,3 +141,11 @@ components:
         died_number:
           description: 死亡数
           type: number
+    inline_object_2:
+      properties:
+        message:
+          description: メッセージ
+          type: string
+        'result ':
+          $ref: '#/components/schemas/result__total_population'
+      type: object
