# go/model_data_total_population.go
@@ -1,19 +1,0 @@
-/*
- * job_offer
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type DataTotalPopulation struct {
-
-	// 年度
-	Year float32 `json:"year,omitempty"`
-
-	// 値
-	Value float32 `json:"value,omitempty"`
-}
