# go/model_nest_2_total_population.go
@@ -1,17 +1,0 @@
-/*
- * job_offer
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type Nest2TotalPopulation struct {
-
-	BoundaryYear float32 `json:"boundaryYear,omitempty"`
-
-	Data Nest3TotalPopulation `json:"data,omitempty"`
-}
