# go/model_nest_3__total_population.go
@@ -1,17 +1,0 @@
-/*
- * job_offer
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type Nest3TotalPopulation struct {
-
-	Label string `json:"label,omitempty"`
-
-	Data DataTotalPopulation `json:"data,omitempty"`
-}
