# go/model_occupation_major_classification.go
@@ -1,19 +1,0 @@
-/*
- * job_offer
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type OccupationMajorClassification struct {
-
-	// 職業大分類コード
-	IscoCode string `json:"iscoCode,omitempty"`
-
-	// 職業大分類名
-	IscoName string `json:"iscoName,omitempty"`
-}
